Updated HTML and CSS. Alignment Corrected.

--- a/style.css
+++ b/style.css
@@ -1,207 +1,182 @@
-.headerFixedBar{
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: white;
-    position:fixed;
-    top:0;
-    left:0;
-    right:0;
-    width:100%;
-    height:auto;
- 
- } 
- 
- .headerLogoText{
-    margin-top: 1px;
-     color:#3d5a80;
-     font-size: 1.3em;
-     line-height: 1.2em;
- }
- 
- .headerLogoText:hover{
-     color:#293241; 
-     
-     text-decoration: none;
-     font-size:1.3em;
-     font-weight:500;
- }
- 
- .headerLogoImage{
-     width: 25px;
-     height: 25px;
-     margin-left: 5px;
-     margin-right: 5px;
- }
- .pullLeft{
-    float:left;
-    display:inline-block;
+.headerFixedBar {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: auto;
 }
 
-.pullRight{
-    float:right;
-    display:inline-block;
-}
-.vMiddle{
-
-    position:relative;
-    vertical-align: middle;
-
+.headerLogoText {
+  margin-top: 1px;
+  color: #334299;
+  font-size: 1.3em;
+  line-height: 1.2em;
 }
 
- .themeButton{
-    
-    color:#e0fbfc; ;
-    background-color:#3d5a80; 
-    
-     border-color: black;
-     border-width: thin;
-     padding: 5px;
- }
-
- .themeButton :hover{
-    background-color: white;
-    border-width: thin;
-   /* color:;
-    border-color: ; */
- }
-
- .themeButton :focus{
-     
-    outline: 0;
- }
-
-
-
-
-html{                           /* background for entire page */
-
-    background-color:#e0fbfc;
-}
-.forumBackground{
-    background-color:white ;
-    color: black;
-    margin-bottom:10px ; 
+.headerLogoText:hover {
+  color: #252a72;
+  text-decoration: none;
+  font-size: 1.3em;
+  font-weight: 500;
 }
 
-.paginationArrow{
-    color:#9e9e9e;
-    padding-right:5px;
-    padding-left:5px;
-
-}
-.paginationBar{
-    padding:15px;
-
+.headerLogoImage {
+  width: 25px;
+  height: 25px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-.categoryModule{
-
-   /* background-color: white; */
-    color:black;
-    overflow: none;
-    margin: top 50px;;
-
-
+.pullLeft {
+    float: left;
 }
 
-.forumPad{
-
-    padding-top: 5px;
-    padding-bottom: 20px;
-    padding-left: 5px;
-    padding-right: 5px;
+.pullRight {
+    float: right;
+    display: block;
 }
 
-.forumModule{
-
-    background-color: white;
-    color:black;
-    overflow: none;
-
-}
-.forumMargin{
-
-    margin-bottom: 10px;
-}
-.forumTable{
-
-    width: 100%;
-    height: auto;
-    border: 1px solid #3d5a80;
-
+.vMiddle {
+  position: relative;
+  vertical-align: middle;
 }
 
-.forumTable th{      /*<th> tag defines the header cells in the table which are displayed as bold, center-aligned text.*/
-    padding: 5px;
-    color: #9e9e9e;
+.themeButton {
+  color: white;
+  background-color: #061d68;
+  border-color: black;
+  border-width: thin;
+  padding: 5px;
 }
 
-.forumTable tr{       /*<tr> tag defines the table rows */
-     
-    border: 1px solid #293241;
+.themeButton:hover {
+  background-color: white;
+  color: #061d68;
+  border-width: thin;
+  font-weight: 400!important;
 }
 
-.forumTable td{       /* <td> tag defines the standard cells */
-    
-    padding: 5px;
+.themeButton :focus {
+  outline: 0;
 }
 
-
-
-.columnPad{
-    margin-top:15px;
-    margin-left:5px;
-    margin-bottom:10px;
-
-}
-body{
-    background: color #e0fbfc;
-    margin-top:75px;
-    margin-bottom:25px;
-    margin-left:5px;
-    margin-right:5px;
-} 
-
-h1{
-    font-size: 1.7cm;
-    color:#293241;
-}
-h2{
-    font-size: 1.5cm;
-    color:#ee6c4d;
-}
-h3{
-    font-size: 1.2cm;
-    color: #ee6c4d;
-
-}
-h4{
-    font-size: 1.3cm;
-    color:#ee6c4d;
-
-}
-a{
-    color:#3d5a80;
-    text-decoration:none;
+html {
+  background-color: #ecfbfc;
 }
 
-a:hover{
-    color:#3d5a80;
-    font-weight:500;
-    text-decoration:none;
+.forumBackground {
+  background-color: white;
+  color: black;
+  margin-bottom: 10px;
 }
 
-.forumTable a:hover{
-    font-weight: normal;
-    color:#293241;
+.paginationArrow {
+  color: #9e9e9e;
+  padding-right: 5px;
+  padding-left: 5px;
 }
-.newDiscussionText{
-    height: auto;
-    width: 100%;
-    background-color: white;
-    color:#293241 ;
-    margin-top: 5px;
 
+.paginationBar {
+  padding: 15px;
+}
+
+.categoryModule {
+  color: black;
+  overflow: none;
+  margin: top 50px;
+}
+
+.forumPad {
+  padding-top: 5px;
+  padding-bottom: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.forumModule {
+  background-color: white;
+  color: black;
+  margin-bottom: 10px;
+}
+
+.forumMargin {
+  margin-bottom: 10px;
+}
+
+.forumTable {
+  width: 100%;
+  height: auto;
+  border: 1px solid #3d5a80;
+}
+
+.forumTable th {
+  padding: 5px;
+  color: #9e9e9e;
+}
+
+.forumTable tr {
+  border: 1px solid #9e9e9e;
+}
+
+.forumTable td {
+  padding: 5px;
+}
+
+.columnPad {
+  margin-top: 15px;
+  margin-left: 5px;
+  margin-bottom: 10px;
+}
+
+body {
+  background-color: #ecfbfc;
+  margin-top: 75px;
+  margin-bottom: 25px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+h1 {
+  font-size: 1.7em;
+  color: #334299;
+}
+h2 {
+  font-size: 1.5em;
+  color: #334299;
+}
+h3 {
+  font-size: 1.2em;
+  color: #334299;
+}
+h4 {
+  font-size: 1.3em;
+  color: #334299;
+}
+
+a {
+  color: #3d5a80;
+  text-decoration: none;
+}
+a:hover {
+  color: #3d5a80;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.forumTable a:hover {
+  font-weight: normal;
+  color: #061d68;
+}
+.newDiscussionText {
+  height: auto;
+  width: 100%;
+  background-color: white;
+  color: #061d68;
+  margin-top: 5px;
 }
